1. 计算能否踢出的时候不再根据总人数计算 2. 移除部分配置 3. 移除语言文件支持