@@ -1,20 +1,26 @@
 package io.github.tanyaofei.votekick.command;
 
-import io.github.tanyaofei.votekick.Votekick;
-import io.github.tanyaofei.votekick.model.Kicked;
-import io.github.tanyaofei.votekick.properties.constant.HK;
-import io.github.tanyaofei.votekick.properties.constant.LK;
+import io.github.tanyaofei.plugin.toolkit.command.ExecutableCommand;
 import io.github.tanyaofei.votekick.repository.KickedRepository;
-import io.github.tanyaofei.votekick.util.command.ExecutableCommand;
+import io.github.tanyaofei.votekick.repository.model.Kicked;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
+import static net.kyori.adventure.text.Component.text;
+import static net.kyori.adventure.text.Component.textOfChildren;
 
 public class UnkickCommand extends ExecutableCommand {
+
+    public final static UnkickCommand instance = new UnkickCommand("votekick.admin.*");
+
+    private final KickedRepository kickedRepository = KickedRepository.instance;
 
     public UnkickCommand(@Nullable String permission) {
         super(permission);
@@ -22,7 +28,10 @@ public class UnkickCommand extends ExecutableCommand {
 
     @Override
     public @NotNull Component getHelp() {
-        return Votekick.getConfigManager().getHelpProperties().get(HK.unkick);
+        return textOfChildren(
+                text("取消踢出玩家\n", NamedTextColor.GRAY),
+                text("用法: /vk unkick <玩家>", NamedTextColor.WHITE)
+        );
     }
 
 
@@ -36,20 +45,14 @@ public class UnkickCommand extends ExecutableCommand {
         if (args.length != 1) {
             return false;
         }
-        var success = KickedRepository.getInstance().removeByPlayerName(args[0]);
+
+        var success = kickedRepository.deleteByPlayerName(args[0]) > 0;
         if (success) {
-            sender.sendMessage(
-                    Votekick.getConfigManager()
-                            .getLanguageProperties()
-                            .format(LK.Unkick, args[0])
-            );
+            sender.sendMessage(Component.text("解除踢出成功", NamedTextColor.GRAY));
         } else {
-            sender.sendMessage(
-                    Votekick.getConfigManager()
-                            .getLanguageProperties()
-                            .format(LK.Error_KickNotFound)
-            );
+            sender.sendMessage(Component.text("这个玩家没有被踢出...", NamedTextColor.GRAY));
         }
+
         return true;
     }
 
@@ -64,21 +67,15 @@ public class UnkickCommand extends ExecutableCommand {
             return null;
         }
 
-        if (args[0].isEmpty()) {
-            return KickedRepository
-                    .getInstance()
-                    .list()
-                    .stream()
-                    .map(Kicked::getPlayerName)
-                    .toList();
+        if (args[0].isBlank()) {
+            return null;
         }
 
-        return KickedRepository
-                .getInstance()
-                .list()
+        return kickedRepository
+                .selectLikePlayerName(args[0])
                 .stream()
-                .map(Kicked::getPlayerName)
-                .filter(name -> name.startsWith(args[1]))
-                .toList();
+                .map(Kicked::playerName)
+                .distinct()
+                .collect(Collectors.toList());
     }
 }
